# 3-drag-win

./: .gitignore  .wakatime-project  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASE.md  build.rs
.cargo/: config.toml
.github/: RELEASE_NOTES.md
.github/workflows/: cross-build.yml  linux-build.yml
cpp/: drag.cpp  drag.h
installer/: 3-win-drag.iss
release-assets/: 3-win-drag-linux-x86_64
scripts/: build-installer.ps1  build-linux.ps1  build-linux.sh
src/: app.rs  autostart.rs  commands.rs  config.rs  ffi.rs  logging.rs  main.rs  settings_ui.rs  single_instance.rs  touchpad.rs  tray.rs
src/linux/: mod.rs  wayland.rs  x11.rs
