[package]
name = "three-win-drag"
version = "0.1.2"
edition = "2024"
authors = ["Samin Yeasar"]
license = "MIT"
description = "Professional background utility for dragging windows from anywhere with a modifier gesture."
readme = "README.md"
build = "build.rs"

[[bin]]
name = "3-win-drag"
path = "src/main.rs"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.100"
auto-launch = "0.6.0"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
tray-item = "0.7.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "handleapi", "hidpi", "hidsdi", "libloaderapi", "shellapi", "synchapi", "wincon", "winerror", "winuser"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1", default-features = false, features = ["allow-unsafe-code", "xtest"] }
evdev = "0.12.1"
gtk4 = "0.9.3"
glib = "0.20.9"
gdk-pixbuf = "0.20.10"
hyprland = "0.3.13"
swayipc = "4.0.0"
zbus = "5.16.0"

[build-dependencies]
cc = "1.2.33"
embed-resource = "3.0.6"
image = { version = "0.25.8", default-features = false, features = ["ico", "png"] }
